did a lot of stuff

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,8 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <script src="js/searchCtrl.js"></script>
     <script src="js/dinnerCtrl.js"></script>
     <script src="js/dishCtrl.js"></script>
+    <script src="js/confirmCtrl.js"></script>
+    <script src='js/prepCtrl.js'></script>
 
   </head>
   <body>
