--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!-- Notice the ng-app Angular directive. This tells Angular where the application starts and also
 which module to associate the app with. In app.js we create the "dinnerPlanner" module. -->
+
+
 <html lang="en" ng-app="dinnerPlanner">
   <head>
     <meta charset="utf-8">
@@ -9,17 +11,17 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <title>Dinner planner</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> <!-- bower_components/bootstrap/dist/css/bootstrap.min.css -->
     <link rel="stylesheet" href="style.css">
     <!-- jQuery -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> <!-- bower_components/jquery/dist/jquery.js -->
     <!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> <!--  bower_components/bootstrap/dist/js/bootstrap.min.js -->
     <!-- Angular JavaScript including routing and resource modules  -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script> <!--  bower_components/angular/angular.js -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script> <!--  bower_components/angular-route/angular-route.js -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-resource.js"></script> <!--  bower_components/angular-resource/angular-resource.js" -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-cookies.js"></script> <!--  bower_components/angular-cookies/angular-cookies.js -->
     
     <!-- The application JavaScript code -->
     <script src="js/app.js"></script>
