--- a/app/index.html
+++ b/app/index.html
@@ -11,17 +11,24 @@ which module to associate the app with. In app.js we create the "dinnerPlanner" 
     <title>Dinner planner</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> <!-- bower_components/bootstrap/dist/css/bootstrap.min.css -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"> <!-- bower_components/bootstrap/dist/css/bootstrap.min.css 
+http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css-->
     <link rel="stylesheet" href="style.css">
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script> <!-- bower_components/jquery/dist/jquery.js -->
+    <script src="bower_components/jquery/dist/jquery.js "></script> <!-- bower_components/jquery/dist/jquery.js 
+    https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js-->
     <!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> <!--  bower_components/bootstrap/dist/js/bootstrap.min.js -->
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script> <!--  bower_components/bootstrap/dist/js/bootstrap.min.js 
+http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js-->
     <!-- Angular JavaScript including routing and resource modules  -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js"></script> <!--  bower_components/angular/angular.js -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script> <!--  bower_components/angular-route/angular-route.js -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-resource.js"></script> <!--  bower_components/angular-resource/angular-resource.js" -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-cookies.js"></script> <!--  bower_components/angular-cookies/angular-cookies.js -->
+    <script src="bower_components/angular/angular.js"></script> <!--  bower_components/angular/angular.js 
+https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.js-->
+    <script src="bower_components/angular-route/angular-route.js"></script> <!--  bower_components/angular-route/angular-route.js 
+https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js-->
+    <script src="bower_components/angular-resource/angular-resource.js"></script> <!--  bower_components/angular-resource/angular-resource.js
+    https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-resource.js -->
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script> <!--  bower_components/angular-cookies/angular-cookies.js
+    https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-cookies.js -->
     
     <!-- The application JavaScript code -->
     <script src="js/app.js"></script>
